<resources>
    <string name="app_name">DownloadFiles</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_repo_title">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_repo_title">LoadApp - Current Repository by Udacity</string>
    <string name="retrofit_repo_title">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="notification_channel_id" translatable="false">download_channel</string>
    <string name="detail_action">Check the status</string>
    <string name="notification_channel_name">Done!</string>
    <string name="ok_button_label">OK</string>
    <string name="file_name_label">File name:</string>
    <string name="file_status_label">Status:</string>
</resources>
