<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/cloud_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/download_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimaryDark"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_margin="@dimen/radio_group_margin"
        app:layout_constraintTop_toBottomOf="@id/cloud_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/custom_button">

        <RadioButton
            android:id="@+id/radio_glide"
            style="@style/radio_buttons_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glide_repo_title"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_load_app"
            style="@style/radio_buttons_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/load_app_repo_title"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_retrofit"
            style="@style/radio_buttons_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_repo_title"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <com.udacity.downloadLibsApp.ui.customViews.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_button_height"
        android:layout_margin="@dimen/custom_button_margin"
        android:text="@string/button_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
