<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.detailActivity.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/file_name_label"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name_label"
        android:layout_margin="@dimen/large_margin_or_padding"
        android:padding="@dimen/x_large_margin_or_padding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/file_name_text"
        style="@style/details_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lines="3"
        android:layout_margin="@dimen/large_margin_or_padding"
        android:padding="@dimen/x_large_margin_or_padding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/file_name_label"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/glide_repo_title"/>

    <TextView
        android:id="@+id/file_status_label"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_status_label"
        android:layout_margin="@dimen/large_margin_or_padding"
        android:padding="@dimen/x_large_margin_or_padding"
        app:layout_constraintTop_toBottomOf="@id/file_name_text"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/file_status_text"
        style="@style/details_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lines="3"
        android:layout_margin="@dimen/large_margin_or_padding"
        android:padding="@dimen/x_large_margin_or_padding"
        app:layout_constraintTop_toBottomOf="@id/file_name_text"
        app:layout_constraintStart_toEndOf="@id/file_name_label"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Success"/>

</androidx.constraintlayout.widget.ConstraintLayout>
